--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Sangmin Kim</title>
+  <title>Sang Min Kim</title>
   
-  <meta name="author" content="Sangmin Kim">
+  <meta name="author" content="Sang Min Kim">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -18,9 +18,10 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Sangmin Kim</name>
+                <name>Sang Min Kim</name>
               </p>
-              <p> I am a college student, majoring in Electrical and Computer Engineering at <a href="https://ee.snu.ac.kr/en">Seoul National University</a>.
+              <p>I am a M.S. student in Electrical and Computer Engineering at the Seoul National University under the supervision of <a href="https://3d.snu.ac.kr">Prof. Young Min Kim</a>.
+              <p>I'm working on problems in computer vision and graphics, especially in neural implicit representations.</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:tkdals9082@snu.ac.kr">Email</a> &nbsp/&nbsp
@@ -39,14 +40,33 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
-              <p>
-                I'm interested in computer vision, implicit scene representation, and real-time rendering.
-              </p>
+              <!-- <p>
+                I'm interested in computer vision, implicit scene representati.
+              </p> -->
             </td>
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/egonerf_high.gif' width="160">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <papertitle><a herf="https://www.changwoon.info/publications/EgoNeRF">Balanced Spherical Grid for Egocentric View Synthesis</a></papertitle>
+              <br>
+              <a href="https://www.changwoon.info/">Changwoon Choi</a>, <strong>Sang Min Kim</strong>, <a href="https://3d.snu.ac.kr">Young Min Kim</a>
+              <br>
+              <em>CVPR</em>, 2023
+              <br>
+							<a href="https://www.changwoon.info/publications/EgoNeRF">project page</a> /
+							<a href="https://github.com/changwoonchoi/EgoNeRF">code</a> /
+							<a href="https://arxiv.org/abs/2303.12408">arXiv</a>
+              <p></p>
+              <p>Grid-based NeRF model that utilize a balanced spherical grid to reconstruct large-scale egocentric captured scenes.</p>
+            </td>
+          </tr>
         </tbody></table>
 
 				
@@ -68,10 +88,10 @@
             <td style="padding:20px;width:75%;vertical-align:middle">
               <papertitle>Minicraft: ray-tracing version of minecraft</papertitle>
               <br>
-              <em>Graphics Programming, SNU</em>, 2022
+              <em>Graphics Programming, SNU</em>, Fall 2022
               <br>
-							<a href="https://www.youtube.com/watch?v=rceAh_CjpsY">video</a> /
-							<a href="#"><del>code(tba)</del></a>
+							<a href="https://www.youtube.com/watch?v=rceAh_CjpsY">video</a>
+							<!-- <a href="#"><del>code(tba)</del></a> -->
               <p></p>
               <p>Clone the minecraft with OpenGL. Implement the ray-tracing acceleration algorithm(3D DDA).</p>
             </td>
