--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Sang Min Kim</name>
               </p>
               <p>I am a M.S. student in Electrical and Computer Engineering at the Seoul National University under the supervision of <a href="https://3d.snu.ac.kr">Prof. Young Min Kim</a>.
-              <p>I'm working on problems in computer vision and graphics, especially in neural implicit representations.</a>.
+              <p>I'm working on problems in computer vision and graphics, especially in neural implicit representations.</p>
               </p>
               <p style="text-align:center">
                 <a href="mailto:tkdals9082@snu.ac.kr">Email</a> &nbsp/&nbsp
@@ -49,22 +49,52 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/egonerf_high.gif' width="160">
-              </div>
+                <img src='images/nfl.gif' width="160">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <papertitle><a herf="https://www.changwoon.info/publications/EgoNeRF">Balanced Spherical Grid for Egocentric View Synthesis</a></papertitle>
+              <papertitle>NFL: Normal Field Learning for 6-DoF Grasping of Transparent Objects</papertitle>
+              <br>
+              <a href="https://twjhlee.github.io/">Junho Lee</a>, <strong>Sang Min Kim</strong>, Yonghyeon Lee, <a href="https://3d.snu.ac.kr">Young Min Kim</a>
+              <br>
+              <em>IEEE Robotics and Automation Letters (RA-L)</em>, 2023
+              <br>
+							<a href="https://ieeexplore.ieee.org/document/10328050">paper</a> /
+							<a href="https://www.youtube.com/watch?si=hTqxscnoFOv1oWOy&v=b92CTDKeEk8&feature=youtu.be">video</a>
+              <p></p>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src='images/ctm.gif' width="160">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <papertitle>Robust Novel View Synthesis with Color Transform Module</papertitle>
+              <br>
+              <strong>Sang Min Kim</strong>, <a href="https://www.changwoon.info/">Changwoon Choi</a>, Hyeongjun Heo, <a href="https://3d.snu.ac.kr">Young Min Kim</a>
+              <br>
+              <em>Computer Graphics Forum (Proceedings of Pacific Graphics)</em>, 2023
+              <br>
+							<a href="https://3d.snu.ac.kr/papers/ColorTransformNeRF.pdf">paper</a> /
+							<a href="https://github.com/sangminkim-99/ColorTransformModule">code</a>
+              <p></p>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src='images/egonerf_high.gif' width="160">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <papertitle>Balanced Spherical Grid for Egocentric View Synthesis</papertitle>
               <br>
               <a href="https://www.changwoon.info/">Changwoon Choi</a>, <strong>Sang Min Kim</strong>, <a href="https://3d.snu.ac.kr">Young Min Kim</a>
               <br>
-              <em>CVPR</em>, 2023
+              <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2023
               <br>
 							<a href="https://www.changwoon.info/publications/EgoNeRF">project page</a> /
 							<a href="https://github.com/changwoonchoi/EgoNeRF">code</a> /
 							<a href="https://arxiv.org/abs/2303.12408">arXiv</a>
               <p></p>
-              <p>Grid-based NeRF model that utilize a balanced spherical grid to reconstruct large-scale egocentric captured scenes.</p>
+              <!-- <p>Grid-based NeRF model that utilize a balanced spherical grid to reconstruct large-scale egocentric captured scenes.</p> -->
             </td>
           </tr>
         </tbody></table>
@@ -81,9 +111,7 @@
 					
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
                 <img src='images/minicraft.jpg' width="160">
-              </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <papertitle>Minicraft: ray-tracing version of minecraft</papertitle>
