--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src='images/nfl.gif' width="160">
+                <img src='images/nfl.png' width="160">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <papertitle>NFL: Normal Field Learning for 6-DoF Grasping of Transparent Objects</papertitle>
