--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/sangminkim.png"><img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo" src="images/sangminkim.png" class="hoverZoomLink"></a>
+              <a href="images/sangmin_kim.jpg"><img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo" src="images/sangmin_kim.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
