--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src='images/i2slam_thumbnail_v3.gif' width="160">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <papertitle>I<sup>2</sup>-SLAM: Inverting Imaging Process for Robust Photorealistic Dense SLAM</papertitle>
+              <br>
+              <a href="https://www.gwangtakbae.info/">Gwangtak Bae*</a>, <a href="https://www.changwoon.info/">Changwoon Choi*</a>, Hyeongjun Heo, <strong>Sang Min Kim</strong>, <a href="https://3d.snu.ac.kr">Young Min Kim</a>
+              <br>
+              (*Equal contribution)
+              <br>
+              <em>European Conference on Computer Vision (ECCV)</em>, 2024
+              <br>
+							<a href="#">paper</a> /
+							<a href="#">code</a>
+              <p></p>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src='images/nfl.png' width="160">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
