--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Sang Min Kim</name>
               </p>
-              <p>I am a M.S. student in Electrical and Computer Engineering at the Seoul National University under the supervision of <a href="https://3d.snu.ac.kr">Prof. Young Min Kim</a>.
+              <p>I am a Ph.D. student in Electrical and Computer Engineering at the Seoul National University under the supervision of <a href="https://3d.snu.ac.kr">Prof. Young Min Kim</a>.
               <p>I'm working on problems in computer vision and graphics, especially in neural implicit representations.</p>
               </p>
               <p style="text-align:center">
