update project pages

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               <br>
               <em>European Conference on Computer Vision (ECCV)</em>, 2024
               <br>
+							<a href="https://3d.snu.ac.kr/publications/I2SLAM">project page</a> /
 							<a href="#">paper</a> /
 							<a href="#">code</a>
               <p></p>
@@ -76,6 +77,7 @@
               <br>
               <em>IEEE Robotics and Automation Letters (RA-L)</em>, 2023
               <br>
+							<a href="https://3d.snu.ac.kr/publications/NFL">project page</a> /
 							<a href="https://ieeexplore.ieee.org/document/10328050">paper</a> /
 							<a href="https://www.youtube.com/watch?si=hTqxscnoFOv1oWOy&v=b92CTDKeEk8&feature=youtu.be">video</a>
               <p></p>
@@ -92,6 +94,7 @@
               <br>
               <em>Computer Graphics Forum (Proceedings of Pacific Graphics)</em>, 2023
               <br>
+							<a href="https://3d.snu.ac.kr/publications/ColorTransformModule">project page</a> /
 							<a href="https://3d.snu.ac.kr/papers/ColorTransformNeRF.pdf">paper</a> /
 							<a href="https://github.com/sangminkim-99/ColorTransformModule">code</a>
               <p></p>
