--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <name>Sang Min Kim</name>
               </p>
               <p>I am a Ph.D. student in Electrical and Computer Engineering at the Seoul National University under the supervision of <a href="https://3d.snu.ac.kr">Prof. Young Min Kim</a>.
-              <p>I'm working on problems in computer vision and graphics, especially in neural implicit representations.</p>
+              <p>Previously, I worked on problems in computer vision and graphics, focusing on neural implicit representations for 3D scene reconstruction.</p>
+              <p>My current research interests lie in robotics, aiming to bridge the gap between computer vision and robotic control. I am particularly interested in understanding how humans perceive and interact with their environments, and in enabling robots to imitate such intuitive behaviors.</p>
+
               </p>
               <p style="text-align:center">
                 <a href="mailto:tkdals9082@snu.ac.kr">Email</a> &nbsp/&nbsp
