--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/point2act.gif" width="160">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <papertitle>Point2Act: Efficient 3D Distillation of Multimodal LLMs for Zero-Shot Context-Aware Grasping</papertitle>
+              <br>
+              <strong>Sang Min Kim</strong>, <a href="https://heo0224.github.io">Hyeongjun Heo</a>, <a href="https://www.junhokim.xyz">Junho Kim</a>, <a href="https://www.gabe-yhlee.com/">Yonghyeon Lee</a>, <a href="https://3d.snu.ac.kr">Young Min Kim</a>
+              <br>
+              <em>arXiv</em>, 2025
+              <br>
+							<a href="https://sangminkim-99.github.io/point2act/">project page</a> /
+							<a href="https://www.arxiv.org/abs/2508.03099">paper</a> /
+							<a href="#">code</a>
+              <p></p>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src='images/i2slam_thumbnail_v3.gif' width="160">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
