--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:tkdals9082@snu.ac.kr">Email</a> &nbsp/&nbsp
-                <!--<a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp -->
-                <!--<a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
-                <!--<a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp-->
-                <a href="https://github.com/sangminkim-99/">Github</a>
+                <a href="https://scholar.google.com/citations?user=EM3sg4UAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://github.com/sangminkim-99/">Github</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/sang-min-kim-a74387265/">LinkedIn</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
